--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
   },
   "dependencies": {
     "commander": "~1.1.1",
-    "underscore": "~1.4.3",
-    "request": "~2.12.0",
-    "oauth": "~0.9.10"
+    "oauth": "~0.9.10",
+    "request": "~2.88.0",
+    "underscore": "~1.4.3"
   },
   "devDependencies": {
     "vows": "*"
